# VStore

./: README.md
VStore-NoScope/: TF_DIFF.diff  cutcsv.c  log.h  measure_test.c
VStore-NoScope/data/1cnn-models/: coral-reef-long_convnet_32_32_0.pb  coral-reef-long_convnet_32_32_1.pb  coral-reef-long_convnet_32_32_2.h5  coral-reef-long_convnet_32_32_2.pb  coral-reef-long_convnet_64_32_2.pb  coral-reef-long_convnet_summary.csv  jackson-town-square_convnet_32_32_0.pb  jackson-town-square_convnet_32_32_1.pb  jackson-town-square_convnet_32_32_2.h5  jackson-town-square_convnet_32_32_2.pb  jackson-town-square_convnet_64_32_2.pb  jackson-town-square_convnet_summary.csv
VStore-NoScope/data/1cnn-models/cnn-models/: jackson-town-square_convnet_32_32_0.pb  jackson-town-square_convnet_32_32_1.pb  jackson-town-square_convnet_32_32_2.h5  jackson-town-square_convnet_32_32_2.pb  jackson-town-square_convnet_64_32_2.pb  jackson-town-square_convnet_summary.csv
VStore-NoScope/data/cnn-avg/: coral-reef-long.txt  jackson-town-square.txt
VStore-NoScope/data/cnn-models/: jackson-town-square_convnet_32_32_0.pb  jackson-town-square_convnet_32_32_1.pb  jackson-town-square_convnet_32_32_2.h5  jackson-town-square_convnet_32_32_2.pb  jackson-town-square_convnet_64_32_2.pb  jackson-town-square_convnet_summary.csv
VStore-NoScope/data/experiments/0.125 res/jackson-town-square/: example1.txt  example2.txt  example3.txt  summary.csv
VStore-NoScope/data/experiments/0.25 res/jackson-town-square 3/: example1.txt  example2.txt  example3.txt  summary.csv
VStore-NoScope/data/experiments/0.25 res/jackson-town-square1/: example1.txt  example2.txt  example3.txt  summary.csv
VStore-NoScope/data/experiments/0.25 res/jackson-town-square2/: example1.txt  example2.txt  example3.txt  summary.csv
VStore-NoScope/data/experiments/coral-reef-long/: example1.txt  example2.txt  example3.txt  summary.csv
VStore-NoScope/data/experiments/coral-reef-long/0.05/: params.json  run_testset.sh
VStore-NoScope/data/experiments/coral-reef-long/0.1/: accuracy.json  params.json  run_testset.sh
VStore-NoScope/data/experiments/coral-reef-long/0.25/: accuracy.json  params.json  run_testset.sh
VStore-NoScope/data/experiments/half res/jackson-town-square-5-54/: example1.txt  example2.txt  example3.txt  summary.csv
VStore-NoScope/data/experiments/half res/jackson-town-square4-23/: example1.txt  example2.txt  example3.txt  summary.csv
VStore-NoScope/data/experiments/half res/jackson-town-square5-03/: example1.txt  example2.txt  example3.txt  summary.csv
VStore-NoScope/data/experiments/jackson-town-square/: summary.csv
VStore-NoScope/data/experiments/jackson-town-square/0.0/: accuracy.json  params.json  run_testset.sh
VStore-NoScope/data/experiments/jackson-town-square/0.01/: accuracy.json  params.json  run_testset.sh
VStore-NoScope/data/experiments/jackson-town-square/0.02/: accuracy.json  params.json  run_testset.sh
VStore-NoScope/data/experiments/jackson-town-square/0.03/: accuracy.json  params.json  run_testset.sh
VStore-NoScope/data/experiments/jackson-town-square/0.04/: accuracy.json  params.json  run_testset.sh
VStore-NoScope/data/experiments/jackson-town-square/0.05/: accuracy.json  params.json  run_testset.sh
VStore-NoScope/data/experiments/jackson-town-square/0.1/: accuracy.json  params.json  run_testset.sh
VStore-NoScope/data/experiments/jackson-town-square/0.25/: accuracy.json  params.json  run_testset.sh
VStore-NoScope/noscope/example/: coral-reef-long.npy  jackson-town-square.npy  noscope_motherdog.py  run.sh
VStore-NoScope/noscope/noscope.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
VStore-NoScope/tensorflow-noscope/: .bazelrc  .gitmodules  .tf_configure.bazelrc
VStore-NoScope/tensorflow-noscope/scripts/: .run.sh.swp  avg2txt.py  get_avg.py  run.sh
VStore-NoScope/tensorflow-noscope/tensorflow/: noscope_data .cc
VStore-NoScope/tensorflow-noscope/tensorflow/noscope/: .noscope_data.cc.swp  BUILD  MemoryTests.cc  MemoryTests.h  RxManager.h  build.sh  config.h  dumper.cc  filters.cc  filters.h  measure.c  mm.cc  mse.cc  mse.h  mydecoder.cc  mydecoder.h  noscope.cc  noscope_data.cc  noscope_data.h  noscope_data.original  noscope_labeler.cc  noscope_labeler.h  noscope_original  rt-config.h  rxtx.cc  rxtx.h  stream-info.cc  vs-types.h
VStore-NoScope/tensorflow-noscope/tensorflow/noscope/darknet/: BUILD  convert.sh
VStore-NoScope/tensorflow-noscope/tensorflow/noscope/src/: README.md  RxManager.h  config.h  decode-serv.cpp  env-teddy.sh  measure.c  mm.h
VStore-NoScope/tensorflow-noscope/tools/: python_bin_path.sh
VStore-NoScope/video-streamer/src/: CMakeLists.txt  backup-repo.sh  config.h  lmdb-if.cpp  measure.h  mydecoder.h  mydecoder_sw.cpp  rt-config.h  stream-info.cpp  vs-types.h
VStore-NoScope/video-streamer/src/examples/: decode_video.c
VStore-NoScope/video-streamer/src/micro/: serialization.cpp
VStore-NoScope/video-streamer/src/misc_utilities/benchmarks/: benchmark.cpp
VStore-NoScope/video-streamer/src/openalpr/: alpr_impl.cpp  alpr_impl.h  motiondetector.cpp
VStore-NoScope/video-streamer/src/test/: test-db-build.cpp  test-decoder.cpp  test-sink-current.cpp  test-sink.cpp  test-source.cpp
VStore-NoScope/vstore/: ALPR_DIFF.diff
VStore-NoScope/vstore/config/: openalpr.conf.defaults  openalpr.conf.teddy
VStore-NoScope/vstore/src/: .gitignore  CallBackTimer.h  RxManager.h  StatCollector.h  mm.cpp  mydecoder.cpp  rxtx.cpp
VStore-NoScope/vstore/src/micro/: lmdb-read.cpp
VStore-NoScope/vstore/src/openalpr/: alpr.cpp  alpr.h
VStore-NoScope/vstore/src/test/: test-chunk-puller.cpp  test-fb-sender.cpp  test-rt-scheduler.cpp  test-sink.cpp  test-source.cpp
VStore-NoScope/vstore/src/video/: videobuffer.h
VStore-OpenALPR/: ALPR_DIFF.diff
VStore-OpenALPR/src/: CMakeLists.txt  config-profiling.h  config.h  env-xzl.sh  log.h  rxtx.h
VStore-OpenALPR/src/openalpr/: alpr_impl.cpp
VStore-OpenALPR/src/test/: test-db-build.cpp  test-fb-recver.cpp  test-migrate.cpp  test-sink-profiling.cpp  test-sink.cpp  test-sink50863.cpp  test-source-profiling.cpp  test-source.cpp
(+259 files in other folders)
